# console_tetris

./: CMakeLists.txt
src/: main.c
src/game/: Colors.c  Colors.h  Draw.c  Draw.h  GameLogic.c  GameLogic.h  Settings.c  Settings.h  TetrisFigure.c  TetrisFigure.h  TetrisTypes.h  TwoDimArray.c  TwoDimArray.h  main.c
src/game/Curses/: Draw.c  Draw.h
src/game/X11/: Draw.c  Draw.h
src/libs/Collections/: Collection.c  Collection.h  CollectionGlobal.h  CollectionUtils.c  CollectionUtils.h  List.c  List.h  Vector.c  Vector.h
src/libs/Shared/: types.h
src/libs/String/: Stream.c  Stream.h  String.c  String.h  StringGlobal.h  StringLib.c  StringLib.h  StringList.c  StringList.h  StringSafe.c  StringSafe.h
